--- a/styles/header.css
+++ b/styles/header.css
@@ -1,3 +1,6 @@
 header {
-    background-color: darkblue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Fira Sans", sans-serif
 }
